--- a/res/layout/item_lac.xml
+++ b/res/layout/item_lac.xml
@@ -1,8 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-</LinearLayout>
+    <TextView
+            android:id="@android:id/text1"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_toLeftOf="@android:id/summary"
+            />
+
+    <TextView
+            android:id="@android:id/text2"
+            android:padding="5dp"
+            android:textColor="#090"
+            android:layout_below="@android:id/text1"
+            android:layout_width="match_parent"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            />
+
+    <TextView
+            android:id="@android:id/hint"
+            android:padding="5dp"
+            android:textColor="#009"
+            android:layout_below="@android:id/text1"
+            android:layout_toLeftOf="@android:id/summary"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="10dp"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            />
+
+    <TextView
+            android:id="@android:id/summary"
+            android:textColor="#900"
+            android:textSize="16sp"
+            android:textStyle="bold|italic"
+            android:drawableRight="@drawable/abs__ic_go"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            />
+</RelativeLayout>
