--- a/res/layout/layout_list.xml
+++ b/res/layout/layout_list.xml
@@ -4,4 +4,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <include
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/list"/>
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:id="@android:id/empty"/>
 </RelativeLayout>
