--- a/res/layout/activity_tab.xml
+++ b/res/layout/activity_tab.xml
@@ -13,14 +13,14 @@
         <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_tabwidget"/>
 
         <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                >
+                android:layout_weight="1">
 
         </FrameLayout>
     </LinearLayout>
